Add data source, simplify routes, change colors, add descriptions to routes

--- a/Convert-Veloland-to-KML/veloland-converter.ipynb
+++ b/Convert-Veloland-to-KML/veloland-converter.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "id": "6f60bc1f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Python 3.9 \n",
+    "# Environment: veloland-converter\n",
     "import geopandas as gpd\n",
     "import simplekml\n",
     "from shapely.ops import transform"
@@ -15,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "id": "dfd3e38d",
    "metadata": {},
    "outputs": [],
@@ -33,12 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "id": "b865f21b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Raw data can be obtained from: \n",
+    "# https://data.geo.admin.ch/browser/index.html#/collections/ch.astra.veloland/items/veloland?.asset=asset-veloland_2056.gdb.zip\n",
     "routes = gpd.read_file(\"./Daten/veloland.gdb\",layer=\"Route\")\n",
+    "\n",
+    "# Simplify the routes in order to decrease output file sizes\n",
+    "routes[\"geometry\"] = routes[\"geometry\"].simplify(10)\n",
     "\n",
     "# Reproject geodataframe from CH1903+ LV95 (EPSG:2056) to WGS1984 (EPSG:4326)\n",
     "routes = routes.to_crs(\"epsg:4326\")\n",
@@ -48,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 4,
    "id": "4e370bc4",
    "metadata": {},
    "outputs": [],
@@ -56,23 +62,23 @@
     "# Define styles\n",
     "shared_style_international = simplekml.Style()\n",
     "shared_style_international.linestyle.width = 8\n",
-    "shared_style_international.linestyle.color = \"cc181D9D\"\n",
+    "shared_style_international.linestyle.color = \"cc3B2118\"\n",
     "\n",
     "shared_style_national = simplekml.Style()\n",
     "shared_style_national.linestyle.width = 6\n",
-    "shared_style_national.linestyle.color = \"cc181DCD\"\n",
+    "shared_style_national.linestyle.color = \"cc7A4532\"\n",
     "\n",
     "shared_style_regional = simplekml.Style()\n",
     "shared_style_regional.linestyle.width = 5\n",
-    "shared_style_regional.linestyle.color = \"cc055CFD\"\n",
+    "shared_style_regional.linestyle.color = \"ccBA6A4C\"\n",
     "\n",
     "shared_style_lokal = simplekml.Style()\n",
     "shared_style_lokal.linestyle.width = 4\n",
-    "shared_style_lokal.linestyle.color = \"cc078FE6\"\n",
+    "shared_style_lokal.linestyle.color = \"ccFA8E66\"\n",
     "\n",
     "shared_style_other = simplekml.Style()\n",
     "shared_style_other.linestyle.width = 4\n",
-    "shared_style_other.linestyle.color = \"cce75b15\"\n",
+    "shared_style_other.linestyle.color = \"ccFA8E66\"\n",
     "\n",
     "styles = {\n",
     "    \"International\": shared_style_international,\n",
@@ -84,19 +90,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 5,
    "id": "ade2539d",
    "metadata": {},
    "outputs": [],
    "source": [
     "for ttype in [\"International\", \"National\", \"Regional\", \"Lokal\"]:    \n",
     "    kml = simplekml.Kml()\n",
-    "    kml.document.name = \"Velorouten %s – by ralphstraumann.ch\" % ttype.lower()\n",
+    "    kml.document.name = \"Velorouten %s\" % ttype.lower()\n",
     "\n",
     "    routes_ = [route for route in routes.iterfeatures()]\n",
-    "    for route in routes_:#[0:1]:\n",
-    "        geom = route.get(\"geometry\").get(\"coordinates\")[0]\n",
-    "\n",
+    "    for route in routes_: #[0:1]:\n",
+    "        geom = route.get(\"geometry\").get(\"coordinates\")\n",
+    "        \n",
+    "        # Some properties aren't used yet\n",
     "        props = route.get(\"properties\")\n",
     "        tour_nr = props.get(\"TourNrR\")\n",
     "        tour_name = props.get(\"TourNameR\")\n",
@@ -105,14 +112,16 @@
     "        tour_end = props.get(\"ZOrt\")\n",
     "        tour_dir = props.get(\"Abwicklung\")\n",
     "\n",
-    "        tour_dist_km = props.get(\"LaengeR\") / 1000\n",
+    "        tour_dist_km = round(props.get(\"LaengeR\") / 1000, 1)\n",
     "        tour_cond_req = props.get(\"KonditionR\")\n",
     "        tour_tech_req = props.get(\"TechnikR\")\n",
     "        tour_type = props.get(\"Typ_TR\")\n",
     "\n",
     "        if tour_type == ttype:\n",
     "\n",
-    "            ls = kml.newlinestring(name=\"%s: %s\" % (tour_nr, tour_name))\n",
+    "            ls = kml.newlinestring(name=\"%s: %s\" % (tour_nr, tour_name), \n",
+    "                                   description=\"%s (%s)<br>Konditionsanforderung: %s<br>Technikanforderung: %s\" % \n",
+    "                                   (tour_desc, tour_dir, tour_cond_req, tour_tech_req))\n",
     "            ls.coords = list(geom)\n",
     "            ls.style = styles.get(tour_type)\n",
     "\n",
@@ -122,12 +131,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a5d47cf",
+   "id": "da3a7b61",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(kml.kml())"
-   ]
+   "source": []
   }
  ],
  "metadata": {
